# LLM-Guard-Scanner

./: .env.example  .gitignore  CONTRIBUTING.md  EVALUATION.md  LIMITATIONS.md  Makefile  OVERHAUL.md  README.md  RULES_VERSIONING.md  SECURITY.md  THREAT_MODEL.md  api.py  demo.py  provenance.json  pyproject.toml  requirements-ml.txt  requirements.txt  sarif_output.json  sbom.json  scan.py  smoke_test.sh  verify.py
.github/: dependabot.yml
.github/workflows/: ci.yml  demo-smoke.yml
data/payloads/: red_team_corpus.txt
docs/: ML_SECURITY_AUDIT_2026.md  security-showcase.html
src/: agentic_scanner.py  pipeline.py
src/detectors/: __init__.py  canary.py  classifier.py  heuristics.py  injection.py  normalization.py  perplexity.py  rag_poisoning.py  semantic.py
src/guardrails/: __init__.py  output_scanner.py
src/utils/: __init__.py  compliance.py
tests/: conftest.py  test_benchmark_evidence.py  test_detectors.py  test_ml_detectors.py  test_pipeline_and_scanner.py
