[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "llm-guard-scanner"
version = "0.2.1"
description = "LLM security scanner: prompt injection, PII/secret output scanning, RAG poisoning checks mapped to OWASP LLM Top 10."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Core scanner has zero heavy dependencies — runs without torch or transformers.
# The regex detectors and entropy scanner only need the stdlib.
dependencies = []

[project.optional-dependencies]
# Install these to enable the transformer-based classifier and GPT-2 perplexity
ml = [
    "torch>=2.3.0,<3.0.0",
    "transformers>=4.40.0,<6.0.0",
]
# FastAPI middleware for production serving
api = [
    "fastapi>=0.115.0,<1.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-cov>=6.0.0,<8.0.0",
    "ruff>=0.8.4,<0.10.0",
    "pip-audit>=2.7.3,<3.0.0",
    "bandit>=1.8.0,<2.0.0",
]

[project.scripts]
llm-guard = "scan:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if __name__"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
